--- a/package.json
+++ b/package.json
@@ -3,30 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "postinstall": "prisma generate"
-    "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "stripe": "^18.4.0",
-    "zod": "^4.0.17"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "stripe": "^16.6.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.1.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/node": "^20.14.10",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.0",
     "eslint-config-next": "15.4.6",
+    "postcss": "^8.4.41",
     "prisma": "^6.13.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.6.2"
   }
 }
